Fix cards dynamic route with hardcoded data

--- a/src/pages/cards/[slug].astro
+++ b/src/pages/cards/[slug].astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
-import { cards } from '../../data/cards.js';
+import { cards } from '../../data/card.js';
 
 // Example card data (hardcoded for now)
 // const cards = [
